--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=microservicio-usuarios
 server.port=8081
 
-spring.datasource.url=jdbc:sqlite:./data/app.db
+spring.datasource.url=jdbc:sqlite:/app/data/app.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
